kubectl/replicaset-grpc-pod-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: s-grpc-hello-service
spec:
  clusterIP: None
  selector:
    app: s-grpc-hello
  ports:
    - port: 8999
      name: http2
