kubectl/azure-vs-grpchello.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grpc-hello-vs
spec:
  hosts:
  - "*"
  gateways:
  - general-gateway
  http:
  - route:
    - destination:
        host: grpc-hello-service.default.svc.cluster.local
        port:
          number: 8999
