kubectl/istio-stateful-grpc-pod-svc-pod-routes.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: s-grpc-hello-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: grpc
      protocol: grpc
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name:  s-grpc-hello-serviceentry
spec:
  hosts:
  - s-grpc-hello-0.s-grpc-hello-service.default.svc.cluster.local
  - s-grpc-hello-1.s-grpc-hello-service.default.svc.cluster.local
  location: MESH_INTERNAL
  ports:
  - name: http2
    number: 8999
    protocol: HTTP2
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: s-grpc-hello-vs
spec:
  hosts:
  - "*"
  gateways:
  - s-grpc-hello-gateway
  http:
  - match:
    - headers:
        instance:
          exact: "0"
    route:
    - destination:
        host: s-grpc-hello-0.s-grpc-hello-service.default.svc.cluster.local
        port:
          number: 8999
  - match:
    - headers:
        instance:
          exact: "1"
    route:
    - destination:
        host: s-grpc-hello-1.s-grpc-hello-service.default.svc.cluster.local
        port:
          number: 8999
