kubectl/istio-stateful-grpc-pod-svc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: s-grpc-hello-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: grpc
      protocol: grpc
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: s-grpc-hello-vs
spec:
  hosts:
  - "*"
  gateways:
  - s-grpc-hello-gateway
  http:
  - match:
    - headers:
        instance:
          exact: "0"
    - headers:
        instance:
          exact: "1"
    route:
    - destination:
        host: s-grpc-hello-service
        port:
          number: 8999
